--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -61,16 +61,100 @@
   height: 100px;
   background-color: #ffffff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.main_room_name {
+  font-size: 24px;
+  color: #333;
+  padding: 36px 0 0 0;
+}
+
+.exit_chat {
+  padding: 40px 0 0 0;
+}
+
+.exit_chat a{
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+  text-decoration: none;
 }
 
 .main-middle {
   height: calc(100vh - 190px);
   background-color: #fafafa;
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.upper_message {
+  padding: 10px 0 0 0;
+  display: flex;
+}
+
+.user {
+  font-size: 16px;
+  color: #434A54;
+}
+
+.date {
+  font-size: 12px;
+  color: #999;
+  margin-left: 10px;
+}
+
+.lower_message {
+  padding: 10px 0 0 0;
+  margin-bottom: 40px;
+}
+
+.message {
+  font-size: 14px;
+  color: #434A54;
 }
 
 .main-bottom {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+}
+
+.left_form {
+  width: 100%;
+  background-color: white;
+  display: flex;
+}
+
+.message_box {
+  height: 50px;
+  width: 100%;
+  padding: 0 0 0 10px;
+  border: none;
+}
+
+.submit_btn {
+  height: 50px;
+  font-size: 16px;
+  color: white;
+  padding: 0 20px;
+  background-color: #38aef0;
+  border: none;
+  margin-left: 15px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
