--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,48 @@
 <div class="main-top">
+  <div class="main_room_name">
+    techroom1
+  </div>
+  <div class="exit_chat">
+    <a href="">チャットを終了する</a>
+  </div>
 </div>
+
 <div class="main-middle">
+  <div class="upper_message">
+    <div class="user">
+      Tom
+    </div>
+    <div class="date">
+      2020/3/31(Wed) 12:43:30
+    </div>
+  </div>
+  <div class="lower_message">
+    <div class="message">
+      おはよう
+    </div>
+  </div>
+  <div class="upper_message">
+    <div class="user">
+      Tom
+    </div>
+    <div class="date">
+      2020/3/31(Wed) 12:43:30
+    </div>
+  </div>
+  <div class="lower_message">
+    <div class="message">
+      おはよう
+    </div>
+  </div>
 </div>
+
 <div class="main-bottom">
+  <div class="left_form">
+    <input type="text" placeholder="type a message" class="message_box">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input type="submit" value="送信" class="submit_btn">
 </div>
