--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -36,13 +36,13 @@
   </div>
 </div>
 
-<div class="main-bottom">
+<%= form_with model: [@room, @message], class: "main-bottom", local: true do |f| %>
   <div class="left_form">
-    <input type="text" placeholder="type a message" class="message_box">
+    <%= f.text_field :content, class: "message_box", placeholder: "type a message" %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: "hidden" %>
     </label>
   </div>
-  <input type="submit" value="送信" class="submit_btn">
-</div>
+  <%= f.submit "送信", class: "submit_btn" %>
+<% end %>
