メッセージの表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -8,32 +8,7 @@
 </div>
 
 <div class="main-middle">
-  <div class="upper_message">
-    <div class="user">
-      Tom
-    </div>
-    <div class="date">
-      2020/3/31(Wed) 12:43:30
-    </div>
-  </div>
-  <div class="lower_message">
-    <div class="message">
-      おはよう
-    </div>
-  </div>
-  <div class="upper_message">
-    <div class="user">
-      Tom
-    </div>
-    <div class="date">
-      2020/3/31(Wed) 12:43:30
-    </div>
-  </div>
-  <div class="lower_message">
-    <div class="message">
-      おはよう
-    </div>
-  </div>
+  <%= render partial: "message", collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: "main-bottom", local: true do |f| %>
