--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="main-top">
   <div class="main_room_name">
-    techroom1
+    <%= @room.name %>
   </div>
   <div class="exit_chat">
     <a href="">チャットを終了する</a>
