--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,9 +1,9 @@
 <div class="upper_message">
   <div class="user">
-    <% message.user.name %>
+    <%= message.user.name %>
   </div>
   <div class="date">
-    <%= message.created_at %>
+    <%= l message.created_at %>
   </div>
 </div>
 <div class="lower_message">
