--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -10,4 +10,6 @@
   <div class="message">
     <%= message.content %>
   </div>
+  <%= image_tag message.image.variant(resize: "500x500"), class: "message-image" if message.image.attached? %>
+  </div>
 </div>
